# find-parent-challenge

./: .pre-commit-config.yaml  README.md  challenge.md  cli.py  pyproject.toml
tests/: tests.py
